syntax = "proto3";

option java_package = "GRPCService";
import "user.proto";
import "image.proto";
package post;

service Post{

}

message PostObj{
  int32 id =1;
  string title =2;
  string description =3;
  int32 price =4;
  string address =5;
  string condition =6;
  string phoneNumber =7;
  string email =8;
  user.UserObj writer =9;
  repeated image.ImageObj images =10;


}

message dateCreated{
  int32 day =1;
  int32 month =2;
  int32 year =3;
}
